2014-01-06 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
  * disable coveralls for ruby < 1.9
  * initial commit