@@ -1,5 +1,10 @@
 ---
 language: ruby
+# temporary workaround for travis issue #1793
+# see: https://github.com/travis-ci/travis-ci/issues/1793
+before_install:
+  - gem update --system 2.1.11
+  - gem --version
 rvm:
   - 1.8.7
   - 1.9.3
