@@ -4,11 +4,6 @@ group :development, :test do
   gem 'rake' 
   gem 'rspec-puppet'
   gem 'puppetlabs_spec_helper',  :require => false                              
-#  gem 'serverspec',              :require => false                              
-#  gem 'rspec-system',            :require => false                              
-  gem 'rspec-system-puppet'
-  gem 'rspec-system-serverspec', :require => false                              
-#  gem 'puppet-lint'
   if RUBY_VERSION >= "1.9"
     gem 'coveralls', :require => false
   end
