@@ -1,3 +1,4 @@
 2014-01-06 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
+  * added workaround for travis-ci issue #1793
   * disable coveralls for ruby < 1.9
   * initial commit
